@@ -41,6 +41,7 @@ Version 1.13.2+dev:
    * GUI1 comboboxes now use the thinner menu frame style.
    * Implemented a new GUI2 Attack dialog
    * Added gui2 comboboxes.
+   * Removed prompt when purging the WML cache from Preferences.
  * WML engine:
    * Added new event "unit placed", which triggers when (and regardless of how)
      a unit appears on the map.
